--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-typescale": "^0.2.3",
     "stylelint": "^13.3.1",
-    "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.16.1",
     "stylelint-selector-bem-pattern": "^2.1.0",
     "tenon-node": "^0.4.1",
     "wordwrap": "^1.0.0",
