--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -5,10 +5,25 @@
         "stylelint-selector-bem-pattern"
 	],
     "rules": {
+        "at-rule-no-unknown": [true, {
+            "ignoreAtRules": [
+                "at-root",
+                "for",
+                "function",
+                "if",
+                "each",
+                "else",
+                "elseif",
+                "extend",
+                "include",
+                "mixin",
+                "typescale"
+            ]
+        }],
         "indentation": 4,
         "max-nesting-depth": 7,
         "no-invalid-double-slash-comments": null,
-        "number-leading-zero": null,
+        "number-leading-zero": "never",
         "order/properties-alphabetical-order": null,
 		"order/properties-order": [
             "content",
