--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -20,8 +20,12 @@
                 "typescale"
             ]
         }],
+        "block-closing-brace-newline-after": "always",
+        "block-opening-brace-space-before": "always",
+        "function-url-quotes": "always",
         "indentation": 4,
         "max-nesting-depth": 7,
+        "no-eol-whitespace": true,
         "no-invalid-double-slash-comments": null,
         "number-leading-zero": "never",
         "order/properties-alphabetical-order": null,
