--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -20,14 +20,30 @@
                 "typescale"
             ]
         }],
+        "at-rule-semicolon-newline-after": "always",
+        "at-rule-no-vendor-prefix": true,
         "block-closing-brace-newline-after": "always",
         "block-opening-brace-space-before": "always",
+        "color-named": "never",
+        "color-no-hex": true,
+        "declaration-block-no-duplicate-properties": true,
+        "declaration-colon-space-after": "always",
+        "declaration-colon-space-before": "never",
+        "declaration-no-important": true,
+        "declaration-block-no-shorthand-property-overrides": true,
+        "declaration-bang-space-after": "never",
+        "declaration-bang-space-before": "always",
         "function-url-quotes": "always",
         "indentation": 4,
+        "length-zero-no-unit": true,
+        "max-empty-lines": 1,
         "max-nesting-depth": 7,
+        "media-feature-name-no-vendor-prefix": true,
+        "no-duplicate-selectors": true,
         "no-eol-whitespace": true,
         "no-invalid-double-slash-comments": null,
         "number-leading-zero": "never",
+        "number-no-trailing-zeros": true,
         "order/properties-alphabetical-order": null,
 		"order/properties-order": [
             "content",
@@ -198,8 +214,17 @@
             },
             "utilitySelectors": "^\\.util-[a-z]+$"
         },
+        "property-no-unknown": [true, {
+            "ignoreProperties": [
+                "typescale"
+            ]
+        }],
+        "property-no-vendor-prefix": true,
         "selector-class-pattern": null,
+        "selector-list-comma-newline-after": "always",
         "selector-no-qualifying-type": null,
-        "string-quotes": "single"
+        "selector-no-vendor-prefix": true,
+        "string-quotes": "single",
+        "value-no-vendor-prefix": true
 	}
 }
