--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "adm-zip": "^0.4.13",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
-    "copy": "^0.3.2",
     "core-js": "^3.2.1",
+    "cpy": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
