--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "lint:js": "./scripts/lint/js.sh",
     "lint:php": "./scripts/lint/php.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
-    "release": "./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh && node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
+    "release": "./scripts/postuninstall/composer.sh && node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
