--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
+    "numeral": "^2.0.6",
     "postcss-cli": "^7.1.0",
     "postcss-custom-properties": "^9.1.1",
     "postcss-pxtorem": "^4.0.1",
