--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
   },
   "scripts": {
     "preinstall": "chmod a+x scripts/**/*.sh",
-    "pretest": "./scripts/pretest/npm-test.sh && ./scripts/pretest/fixtures.sh",
     "compile:css": "./scripts/compile/css.sh",
     "compile:js": "./scripts/compile/js.sh",
     "compile": "./scripts/compile/css.sh && ./scripts/compile/js.sh",
@@ -75,16 +74,19 @@
     "lint:js": "./scripts/lint/js.sh",
     "lint:php": "./scripts/lint/php.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
-    "release": "./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh && node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
+    "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh",
+    "prerelease": "./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh",
+    "release": "node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
+    "postrelease": "./scripts/postrelease/delete-release-folder.sh",
+    "pretest": "./scripts/pretest/npm-test.sh && ./scripts/pretest/fixtures.sh",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
     "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
     "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
     "test": "./scripts/test/npm-install.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
-    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/dependencies.sh",
-    "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh",
-    "version": "node ./scripts/version/plugin-bump.js"
+    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
   },
   "repository": {
     "type": "git",
