--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "lint:php": "./scripts/lint/php.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
     "reinstall": "chmod a+x scripts/**/*.sh && ./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh",
-    "prerelease": "./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh",
-    "release": "node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
+    "prerelease": "./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh && chmod a+x scripts/**/*.sh",
+    "release": "chmod a+x scripts/**/*.sh node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
     "postrelease": "./scripts/postrelease/delete-release-folder.sh",
     "pretest": "./scripts/pretest/npm-test.sh && ./scripts/pretest/fixtures.sh",
     "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
@@ -86,7 +86,7 @@
     "test": "./scripts/test/npm-install.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
-    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
+    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh && chmod a+x scripts/**/*.sh"
   },
   "repository": {
     "type": "git",
