--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-custom-properties": "^9.1.1",
     "postcss-pxtorem": "^4.0.1",
     "postcss-typescale": "^0.2.3",
+    "progress-barjs": "^2.2.1",
     "stylelint": "^13.3.1",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.16.1",
