--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-typescale": "^0.2.3",
     "progress-barjs": "^2.2.1",
+    "replace-in-files-cli": "^0.3.1",
     "stylelint": "^13.3.1",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.16.1",
     "stylelint-selector-bem-pattern": "^2.1.0",
-    "template-file": "^3.1.0",
     "tenon-node": "^0.4.1",
     "wordwrap": "^1.0.0",
     "zip-folder": "^1.0.0"
@@ -83,7 +83,7 @@
     "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
     "test": "./scripts/test/npm-install.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "version": "node ./scripts/version/plugin-bump.js",
-    "postinstall": "node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
+    "postinstall": "./scripts/postinstall/config.sh && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
   },
   "repository": {
