--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ if: NOT (branch = master) OR (branch = master AND tag IS present)
 # Run the tests
 script:
   - npm run lint:internal
-# - npm run test:internal
+  - npm run test:internal
 
 # Notifications of build results
 # https://docs.travis-ci.com/user/notifications/
