--- a/config/.eslintrc
+++ b/config/.eslintrc
@@ -1,41 +1,42 @@
 {
-  "parser": "babel-eslint",
-  "extends": [
-    "airbnb-base/legacy",
-    "plugin:cypress/recommended"
-  ],
-  "plugins": [
-    "chai-friendly"
-  ],
-  "ignorePatterns": [
-    "*-es5.js",
-    "bin/",
-    "config/naturaldocs/",
-    "docs",
-    "node_modules/",
-    "vendor/"
-  ],
-  "rules": {
-    "array-bracket-spacing": ["error", "always"],
-    "block-spacing": ["error", "always"],
-    "comma-spacing": ["error"],
-    "computed-property-spacing": ["error", "always"],
-    "func-names": ["warn", "as-needed"],
-    "max-len": [ "error", {
-      "code": 80,
-      "tabWidth": 4,
-      "ignoreUrls": true,
-      "ignoreComments": true,
-      "ignoreRegExpLiterals": true,
-      "ignoreStrings": true,
-      "ignoreTemplateLiterals": true
-      }
+    "parser": "babel-eslint",
+    "extends": [
+        "airbnb-base/legacy",
+        "plugin:cypress/recommended",
+        "plugin:jsdoc/recommended"
     ],
-    "object-curly-spacing": ["error", "always"],
-    "space-in-parens": ["error", "always"],
+    "plugins": [
+        "chai-friendly",
+        "jsdoc"
+    ],
+    "ignorePatterns": [
+        "*-es5.js",
+        "bin/",
+        "config/naturaldocs/",
+        "docs",
+        "node_modules/",
+        "postcss.config.js",
+        "vendor/"
+    ],
+    "rules": {
+        "array-bracket-spacing": ["error", "always"],
+        "block-spacing": ["error", "always"],
+        "comma-spacing": ["error"],
+        "func-names": ["warn", "as-needed"],
+        "indent": ["warn", 4],
+        "max-len": [ "error", {
+            "code": 80,
+            "tabWidth": 4,
+            "ignoreUrls": true,
+            "ignoreComments": true,
+            "ignoreRegExpLiterals": true,
+            "ignoreStrings": true,
+            "ignoreTemplateLiterals": true
+        }
+    ],
     "no-use-before-define": "warn",
     "no-unused-vars": "warn",
     "no-unused-expressions": 0,
     "chai-friendly/no-unused-expressions": 2
-  }
+    }
 }
