--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
     - run: npm ci
-    - run: npm run lint --if-present
-    - run: npm run compile --if-present
-    - run: npm run release --if-present
+    - run: npm run test
 
     # https://github.com/marketplace/actions/action-release
     - name: Upload release to the repository's Releases page
