Run internal tasks (and added new key to Travis using 'repo' permissions)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
 # Run the tests
 script:
   - npm run lint:internal
-  # - npm run test:internal
+  - npm run test:internal
 
 # Notifications of build results
 # https://docs.travis-ci.com/user/notifications/
