--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
     - run: npm ci
-    - run: npm run test
+    - run: npm run lint:internal
+    - run: npm run test:internal
 
     # https://github.com/marketplace/actions/action-release
     - name: Upload release to the repository's Releases page
