--- a/package.json
+++ b/package.json
@@ -70,15 +70,9 @@
     "compile": "./scripts/compile/css.sh && ./scripts/compile/js.sh",
     "docs": "./scripts/docs/naturaldocs.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
-    "lint:internal": "eslint './**/*.js'",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
     "release": "node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
-    "pretest": "./scripts/pretest/npm-test.sh && ./scripts/pretest/fixtures.sh",
-    "test:compile": "mocha --recursive \"./test/**/compile.spec.js\" --full-trace",
-    "test:dependencies": "mocha --recursive \"./test/**/dependencies.spec.js\" --full-trace",
-    "test:documentation": "mocha --recursive \"./test/**/documentation.spec.js\" --full-trace",
-    "test:lint": "mocha --recursive \"./test/**/lint.spec.js\" --full-trace",
-    "test:internal": "mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "test": "chmod a+x scripts/**/*.sh && ./scripts/test/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace && ./scripts/test/teardown.sh",
     "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
