--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,7 @@ jobs:
         php-version: '7.2.15'
         node-version: ${{ matrix.node-version }}
     - run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
-    - run: npm ci
-    - run: npm run lint:internal
-    - run: npm run test:internal
+    - run: npm run test
 
     # https://github.com/marketplace/actions/action-release
     - name: Upload release to the repository's Releases page
