--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-jsdoc": "^23.0.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-markdown": "^1.0.0",
+    "execa": "^4.0.0",
     "gh-rate-limit": "^1.0.0",
     "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
     "include-media": "^1.4.9",
@@ -59,7 +60,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "execa": "^4.0.0",
     "mocha": "^6.2.1"
   },
   "config": {
@@ -70,9 +70,11 @@
     "compile": "./scripts/compile/css.sh && ./scripts/compile/js.sh",
     "docs": "./scripts/docs/naturaldocs.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
+    "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
     "release": "node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
-    "test": "chmod a+x scripts/**/*.sh && ./scripts/test/teardown.sh && ./scripts/test/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "test:internal": "chmod a+x scripts/**/*.sh && ./scripts/test/teardown.sh && ./scripts/test/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "test": "node ./scripts/test/install-wpunit.js && ./scripts/test/phpunit.sh",
     "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
