Move internal test files out of scripts folder, create pretest task, enable test tests

--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
     "release": "node ./scripts/release/copy-files.js && node ./scripts/release/create-zip.js",
-    "test:internal": "chmod a+x scripts/**/*.sh && ./scripts/test/teardown.sh && ./scripts/test/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
-    "pretest": "node ./scripts/test/install-wpunit.js",
+    "test:internal": "chmod a+x test/scripts/**/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "pretest": "node ./scripts/pretest/install-wpunit.js",
     "test": "./scripts/test/phpunit.sh",
     "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
