Add GH mysql credentials

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,10 @@ jobs:
       with:
         php-version: '7.2.15'
         node-version: ${{ matrix.node-version }}
+      env:
+        WPUNIT_DB_USER: root
+        WPUNIT_DB_PASS: root
+        WPUNIT_DB_HOST: localhost
     - run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
     - run: npm run test:internal
 
