--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
   },
   "require": {
     "wp-coding-standards/wpcs": "^0.14.1",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4"
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4",
+    "phpunit/phpunit": "^7.5.14",
+    "psy/psysh" : "~0.6",
+    "wp-cli/wp-cli": "^2.3"
   },
   "require-dev": {
       "dotherightthing/wpdtrt": "dev-development",
