--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
     "root": true,
     "parser": "babel-eslint",
+    "env": {
+        "es6": true,
+        "node": true
+    },
     "extends": [
         "airbnb-base/legacy",
         "plugin:cypress/recommended",
