Don't lint icomoon demo JS files

--- a/config/.eslintrc
+++ b/config/.eslintrc
@@ -15,6 +15,7 @@
         "bin/",
         "config/naturaldocs/",
         "docs",
+        "icons/",
         "node_modules/",
         "postcss.config.js",
         "vendor/"
