--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,10 @@ jobs:
 
     steps:
     # check out the repository, so the workflow can access it
-    - uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
 
-    # https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32738/highlight/true#M1238
-    - name: Branch name
-      id: branch_name
-      run: |
-        echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-        echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-        echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-
-    - name: Run build
+    - name: Run tests
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.2.15'
@@ -36,15 +29,5 @@ jobs:
         WPUNIT_DB_USER: root
         WPUNIT_DB_PASS: root
         WPUNIT_DB_HOST: localhost
-    - run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
-    - run: npm run test:internal
-
-    # https://github.com/marketplace/actions/action-release
-    # - name: Upload release to the repository's Releases page
-    #   uses: yakuhzi/action-release@v1
-    #   if: steps.branch_name.outputs.SOURCE_TAG
-    #   with:
-    #     file: release-${{ steps.branch_name.outputs.SOURCE_TAG }}.zip
-    #     changelog: README.txt
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
+      run: npm run test:internal
