--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,14 @@ jobs:
         php-version: '7.2.15'
         node-version: ${{ matrix.node-version }}
   
+    # env: https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1604-README.md
+    # mysql start: https://github.com/actions/virtual-environments/issues/739
     - name: Run tests 
       run: |
         composer config -g github-oauth.github.com ${{ secrets.GH_PAT_WPDTRT_DBTH }}
+        sudo /etc/init.d/mysql start
         npm run test:internal
       env:
         WPUNIT_DB_USER: root
         WPUNIT_DB_PASS: root
-        WPUNIT_DB_HOST: localhost
+        WPUNIT_DB_HOST: 127.0.0.1
