Fix GH action syntax

--- a/config/.github/workflows/release.yml
+++ b/config/.github/workflows/release.yml
@@ -11,6 +11,9 @@ on:
 
 jobs:
   release:
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Download release folder from Build
       uses: actions/download-artifact@v1
       with:
