--- a/config/phpunit.xml.dist
+++ b/config/phpunit.xml.dist
@@ -18,4 +18,7 @@
 			<directory suffix=".php">./tests</directory>
 		</testsuite>
 	</testsuites>
+	<logging>
+		<log type="testdox-text" target="php://stdout"/>
+	</logging>
 </phpunit>
