--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "core-js": "^3.2.1",
     "cpy": "^8.1.0",
@@ -70,6 +71,7 @@
     "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
     "release": "node ./scripts/release/copy-files.js",
+    "scrape:wordpress_maintenance_page": "node ./scrape/wordpress-maintenance-page.js",
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.js",
     "test": "./scripts/test/phpunit.sh",
