Exclude test dependencies from linting

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
         "docs",
         "node_modules/",
         "postcss.config.js",
-        "vendor/"
+        "vendor/",
+        "wp-content/plugins/"
     ],
     "rules": {
         "array-bracket-spacing": ["error", "always"],
