--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "test": "./scripts/test/phpunit.sh",
     "version": "node ./scripts/version/plugin-bump.js",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
-    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh && ./scripts/postuninstall/npm.sh"
+    "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh"
   },
   "repository": {
     "type": "git",
