--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "stylelint-scss": "^3.16.1",
     "stylelint-selector-bem-pattern": "^2.1.0",
     "tenon-node": "^0.4.1",
-    "wordwrap": "^1.0.0",
-    "zip-folder": "^1.0.0"
+    "wordwrap": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
