--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
     "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
-    "release": "node ./scripts/release/copy-files.js",
+    "release": "node ./scripts/release/copy-files.js && ./scripts/release/changelog.sh",
     "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.js",
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.js",
