Allow changelog generator to be run outside of release script, rename output to CHANGELOG.md (#33)

--- a/config/.github/workflows/build-release-tagged.yml
+++ b/config/.github/workflows/build-release-tagged.yml
@@ -60,7 +60,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: changelog
-        path: changelog.txt
+        path: CHANGELOG.md
 
   release:
     runs-on: ubuntu-latest
@@ -98,6 +98,6 @@ jobs:
       uses: yakuhzi/action-release@v1
       with:
         file: release.zip
-        changelog: ./changelog.txt
+        changelog: CHANGELOG.md
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
