--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
   },
   "scripts": {
     "preinstall": "chmod a+x scripts/**/*.sh",
+    "changelog": "./scripts/changelog/changelog.sh",
     "compile": "./scripts/compile/css.sh && ./scripts/compile/js.sh",
     "docs": "./scripts/docs/naturaldocs.sh",
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
     "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
-    "release": "node ./scripts/release/copy-files.js && ./scripts/release/changelog.sh",
+    "release": "node ./scripts/release/copy-files.js",
     "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.js",
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.js",
