--- a/config/.github/workflows/build-release-tagged.yml
+++ b/config/.github/workflows/build-release-tagged.yml
@@ -62,6 +62,10 @@ jobs:
         name: changelog
         path: CHANGELOG.md
 
+  # The 'release' job starts with a clean directory
+  # we don't check out the repo again
+  # instead we download and work with
+  # the artifacts from the previous 'build' job
   release:
     runs-on: ubuntu-latest
     needs: build
@@ -77,7 +81,7 @@ jobs:
         fi
 
     # Download artifact to 'release' sub folder
-    # to avoid replacing the contents of the root
+    # to avoid adding the contents to the (empty) root
     - name: Download release folder from Build
       if: steps.check-tag.outputs.match == 'true'
       uses: actions/download-artifact@v2
@@ -85,7 +89,6 @@ jobs:
         name: release
         path: release
 
-    # This may be redundant, to test
     - name: Download changelog from Build
       if: steps.check-tag.outputs.match == 'true'
       uses: actions/download-artifact@v2
