--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
       "wiki": "https://bitbucket.org/dotherightthing/wpdtrt-npm-scripts/wiki"
   },
   "require-dev": {
-      "dotherightthing/wpdtrt-dbth": "dev-development",
+      "dotherightthing/wpdtrt-dbth": "dev-master",
       "dotherightthing/wpdtrt-gallery": "dev-master",
       "dotherightthing/wpdtrt-plugin-boilerplate": "^1.7.5"
   },
