--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,7 @@
             "ignoreTemplateLiterals": true
         }],
         "no-use-before-define": "warn",
-        "no-param-reassign": [ "error", {
+        "no-param-reassign": [ "warn", {
             "props": false
         }],
         "no-unused-vars": "warn",
