Fix No files matching the pattern "./**/_*.js" were found, due to fixtures not being able to be updated until wpdtrt-npm-scripts is

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
         "jsdoc"
     ],
     "ignorePatterns": [
-        "*-es5.js",
+        "backend.js",
+        "backend-es5.js",
+        "frontend.js",
+        "frontend-es5.js",
         "bin/",
         "config/naturaldocs/",
         "docs",
