--- a/config/.eslintrc
+++ b/config/.eslintrc
@@ -11,7 +11,10 @@
         "jsdoc"
     ],
     "ignorePatterns": [
-        "*-es5.js",
+        "backend.js",
+        "backend-es5.js",
+        "frontend.js",
+        "frontend-es5.js",
         "bin/",
         "config/naturaldocs/",
         "docs",
