Replace node-sass with Dart Sass (sass)

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "execa": "^4.0.0",
     "gh-rate-limit": "^1.0.0",
     "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
-    "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "normalize-html-whitespace": "^1.0.0",
     "numeral": "^2.0.6",
@@ -50,6 +49,7 @@
     "postcss-typescale": "^0.2.3",
     "progress-barjs": "^2.2.1",
     "replace-in-files": "^2.0.3",
+    "sass": "^1.49.9",
     "stylelint": "^13.3.1",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.16.1",
