--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,20 +11,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [13.x]
-
     steps:
     # check out the repository, so the workflow can access it
     - name: Checkout repo
       uses: actions/checkout@v2
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: 13.x
     
-    - name: Setup PHP
+    - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.2.15'
-        node-version: ${{ matrix.node-version }}
   
     # env: https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1604-README.md
     # mysql start: https://github.com/actions/virtual-environments/issues/739
