--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         php-version: '7.2.15'
   
     # env: https://github.com/actions/virtual-environments/blob/master/images/linux/Ubuntu1604-README.md
+    # Add GitHub personal access token to Composer: https://www.previousnext.com.au/blog/managing-composer-github-access-personal-access-tokens
     # mysql start: https://github.com/actions/virtual-environments/issues/739
     - name: Run tests 
       run: |
