Only lint JS files

--- a/.github/workflows/build-release-changelog-tagged.yml
+++ b/.github/workflows/build-release-changelog-tagged.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: Run build
       run: |
-        npm run lint --if-present
+        npm run lint:internal --if-present
 
     - name: Run tests
       run: |
