Update execa to improve error output, update test spec to use compatible ES6 modules (see https://blog.logrocket.com/running-commands-with-execa-in-node-js/)

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-jsdoc": "^23.0.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-markdown": "^1.0.0",
-    "execa": "^4.0.0",
+    "execa": "^6.1.0",
     "gh-rate-limit": "^1.0.0",
     "gulp-wpdtrt-plugin-bump": "github:dotherightthing/gulp-wpdtrt-plugin-bump",
     "nodemon": "^2.0.2",
@@ -72,7 +72,7 @@
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
     "release": "node ./scripts/release/copy-files.js",
     "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.js",
-    "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec.js\" --full-trace",
+    "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.js",
     "test": "./scripts/test/phpunit.sh",
     "test:cypress": "npx cypress run",
