--- a/package.json
+++ b/package.json
@@ -70,14 +70,14 @@
     "lint": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh",
     "lint:internal": "eslint scripts/**/*.js",
     "prerelease": "./scripts/lint/css.sh && ./scripts/lint/js.sh && ./scripts/lint/php.sh && ./scripts/compile/css.sh && ./scripts/compile/js.sh && ./scripts/postuninstall/composer.sh",
-    "release": "node ./scripts/release/copy-files.js",
-    "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.js",
+    "release": "node ./scripts/release/copy-files.mjs",
+    "scrape:wordpress_maintenance_page": "node ./scripts/scrape/wordpress-maintenance-page.mjs",
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
-    "pretest": "node ./scripts/pretest/create-wp-test-environment.js",
+    "pretest": "node ./scripts/pretest/create-wp-test-environment.mjs",
     "test": "./scripts/test/phpunit.sh",
     "test:js": "npx cypress run",
-    "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.js",
-    "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.js && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.js",
+    "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.mjs",
+    "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.mjs && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.mjs",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh"
   },
   "repository": {
