Ignore warnings about @use (Dart Sass replacement for @import)

--- a/config/.stylelintrc.json
+++ b/config/.stylelintrc.json
@@ -18,7 +18,8 @@
                 "include",
                 "mixin",
                 "return",
-                "typescale"
+                "typescale",
+                "use"
             ]
         }],
         "at-rule-semicolon-newline-after": "always",
