--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.mjs",
     "test": "./scripts/test/phpunit.sh",
-    "test:js": "npx cypress run",
+    "test:jsui": "npx cypress run",
     "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.mjs",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.mjs && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.mjs",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh"
