--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
     "preinstall": "chmod a+x scripts/**/*.sh",
@@ -75,7 +78,7 @@
     "test:internal": "chmod a+x test/scripts/*.sh && ./test/scripts/teardown.sh && ./test/scripts/setup.sh && mocha --recursive \"./test/**/*.spec*\" --extension mjs --extension js --full-trace",
     "pretest": "node ./scripts/pretest/create-wp-test-environment.mjs",
     "test": "./scripts/test/phpunit.sh",
-    "test:jsui": "npx cypress run",
+    "test:js": "./scripts/test/cypress.mjs",
     "version": "./scripts/changelog/changelog.sh && node ./scripts/version/plugin-bump.mjs",
     "postinstall": "./scripts/postinstall/config.sh && node ./scripts/postinstall/customise-config.mjs && ./scripts/postinstall/composer.sh && node ./scripts/postinstall/remaining-github-api-calls.mjs",
     "postuninstall": "./scripts/postuninstall/config.sh && ./scripts/postuninstall/composer.sh"
