Migrate cypress config to new format [skip ci]

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ vendor
 /.browserslistrc
 /.stylelintignore
 /.stylelintrc.json
-/cypress.json
+/cypress.config.js
 /nodemon.json
 /phpcs.xml
 /phpunit.xml.dist
