Add tested versions of Node and NPM to package.json as a reminder (see https://stackoverflow.com/a/72397817 for a test)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.3.38",
   "description": "Common build tasks.",
   "main": "package.json",
+  "engines": {
+    "node": "18.7.0",
+    "npm": "8.15.0"
+  },
   "person": {
     "name": "Dan Smith",
     "email": "dev@dotherightthing.co.nz",
